@@ -1,3 +1,7 @@
+2010-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* photoimage.py: Added Photo Source Icons on the clutter stage.
+
 2010-02-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* photoimage.py, photoframe.py: Added clutter support.
